feat: improved front view + appended spots functional

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -25,6 +25,7 @@
 }
 .modal div p {
   max-width: 300px;
+  text-align: center;
 }
 .modal button {
   border-radius: 15px;
@@ -35,8 +36,15 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin-bottom: 30px;
 }
-.modal button:hover {
-  background-color: rgb(160, 154, 154);
+.modal .close {
+  border: none;
+  background-color: transparent;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 0;
+  right: 20px;
+  cursor: pointer;
 }
 
 body {
