--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -29,6 +29,7 @@
 
         p {
             max-width: 300px;
+            text-align: center;
         }
     }
     button {
@@ -40,11 +41,16 @@
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin-bottom: 30px;
     }
-
-    button:hover {
-        background-color: rgb(160, 154, 154);
+    .close{
+        border: none;
+        background-color: transparent;
+        height: 20px;
+        width: 20px;
+        position: absolute;
+        top: 0;
+        right: 20px;
+        cursor: pointer;
     }
-
 }
 
 body {
